# filter-sni-spoofing

./: Cargo.toml  README.md
example/: Makefile  README.md  spec.yaml
example/client/: Dockerfile  sub.mk
example/dns-server/: Dockerfile  entrypoint.sh  sub.mk
example/dns-server/certs/: csr.conf
example/dns-server/conf/: blocky.yml  dnsmasq.conf  hosts.dnsmasq
example/envoy/: .gitignore  Dockerfile  envoy.yaml  sub.mk
example/server/: Dockerfile  main.py  sub.mk
example/server/certs/: csr.conf
src/: cache.rs  config.rs  lib.rs  log.rs  types.rs
